# gdocs-to-web

./: README.md  gdoc.py  generate.py  index.html  main.py  md2html.py  new_main.py  pyproject.toml  site-config.yaml
css/: main.css
hljs/styles/: default.css
js/: main.js
md/: content.md  fortsattning.md  github.md  grunder.md  index.md  tillampningar.md  uc.md  verktyg.md
public_html/: fortsattning.html  github.html  grunder.html  index.html  tillampningar.html  utveckling.html
public_html/css/: main.css
public_html/data/: movies.json  programming_terms.json
public_html/js/: main.js
public_html/js/processing/: bingrid.js  nodetree.js  p5bg.js  pyramis.js
templates/: main.html
wip/: bu_md2html.py  dark_toc.css  html_snippets_html  wip_site-config.yaml  yaml-test.py
