[project]
name = "gdocs-to-web"
version = "0.1.0"
description = "A simple script to convert Google Docs Markdown export to valid HTML."
authors = [
    {name = "Markus Pettersson",email = "markus.pettersson@edu.huddinge.se"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup (>=3.2.2,<4.0.0)",
    "markdown (>=3.9,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
